// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FixRecord form should allow content indicators to be selected 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <DocumentFragment>
    <div
-     style=\\"padding: 8px;\\"
+     class=\\"MuiGrid-container-3 StandardPage\\"
+   >
+     <h2
+       class=\\"MuiTypography-root-100 MuiTypography-h4-115 MuiTypography-colorPrimary-130 Page-layoutTitle-306\\"
+     >
+       Request a correction, add more information or upload files
+     </h2>
+     <div
+       class=\\"MuiGrid-item-4 Page-layoutCard-305\\"
+     >
+       <form>
+         <div
+           class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27\\"
+         >
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-312 MuiPaper-elevation1-315 MuiPaper-rounded-313 MuiCard-root-311 Cards-card-307 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-339\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-342\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-343\\"
+                   >
+                     Work to be amended
+                   </h3>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-345\\"
+               >
+                 <div
+                   class=\\"publicationCitation\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-container-3\\"
+                   >
+                     <div
+                       class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
+                     >
+                       <div
+                         class=\\"MuiGrid-container-3\\"
+                       >
+                         <div
+                           class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
+                           style=\\"min-width: 1px;\\"
+                         >
+                           <h6
+                             class=\\"MuiTypography-root-100 MuiTypography-h6-117 PublicationCitation-citationTitle-347\\"
+                           >
+                             <a
+                               href=\\"/view/UQ:41878\\"
+                             >
+                               Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth
+                             </a>
+                           </h6>
+                         </div>
+                         <div
+                           class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 PublicationCitation-citationText-348\\"
+                         >
+                           <div
+                             class=\\"citationContent citationJournalArticle\\"
+                           >
+                             <span
+                               class=\\"citationAuthors\\"
+                             >
+                               <span
+                                 class=\\"citationAuthor\\"
+                               >
+                                 He, Y., 
+                               </span>
+                               <span
+                                 class=\\"citationAuthor\\"
+                               >
+                                 Brown, M. A., 
+                               </span>
+                               <span
+                                 class=\\"citationAuthor\\"
+                               >
+                                 Rothnagel, J. A., 
+                               </span>
+                               <span
+                                 class=\\"citationAuthor\\"
+                               >
+                                 Saunders, N. A.
+                               </span>
+                               <span
+                                 class=\\"citationAuthor\\"
+                               >
+                                  and Smith, R.
+                               </span>
+                                
+                             </span>
+                             <span
+                               class=\\"citationDate\\"
+                             >
+                               (2004).
+                             </span>
+                             <span
+                               class=\\"citationTitle\\"
+                             >
+                                Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth.
+                             </span>
+                             <span
+                               class=\\"citationJournalName\\"
+                             >
+                                Molecular Biology of The Cell 
+                             </span>
+                             <span
+                               class=\\"citationVolumeNumber\\"
+                             >
+                                15 
+                             </span>
+                             <span
+                               class=\\"citationIssueNumber empty\\"
+                             />
+                             <span
+                               class=\\"citationPageRange\\"
+                             >
+                               <span
+                                 class=\\"citationStartPage\\"
+                               >
+                                 252A
+                               </span>
+                               -
+                               <span
+                                 class=\\"citationEndPage\\"
+                               >
+                                 253A
+                               </span>
+                             </span>
+                             <span>
+                               . 
+                             </span>
+                             <span
+                               class=\\"citationDOI empty\\"
+                             />
+                           </div>
+                         </div>
+                         <div
+                           class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 PublicationCitation-citationCounts-349\\"
+                         >
+                           <div
+                             class=\\"MuiGrid-container-3\\"
+                           >
+                             <div
+                               class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-auto-44\\"
+                             >
+                               <a
+                                 aria-label=\\"Full citation in Web of science will open in a new window\\"
+                                 class=\\"wosCitationCount CitationCountView-citationCount-354 ExternalLink-externalLink-356\\"
+                                 href=\\"http://ezproxy.library.uq.edu.au/login?url=http://gateway.isiknowledge.com/gateway/Gateway.cgi?GWVersion=2&SrcApp=resolve1&DestLinkType=FullRecord&DestApp=WOS_CPL&KeyUT=000224648802120&SrcAuth=uqueensland\\"
+                                 rel=\\"noopener noreferrer\\"
+                                 tabindex=\\"0\\"
+                                 target=\\"_blank\\"
+                                 theme=\\"[object Object]\\"
+                                 title=\\"Full citation in Web of science will open in a new window\\"
+                               >
+                                 <span
+                                   class=\\"fez-icon wos large\\"
+                                 />
+                                 <span
+                                   class=\\"CitationCountView-citationCountNumber-355\\"
+                                 >
+                                   2
+                                 </span>
+                               </a>
+                               <a
+                                 aria-label=\\"Full citation in Google scholar will open in a new window\\"
+                                 class=\\"googleCitationCount CitationCountView-citationCount-354 ExternalLink-externalLink-356\\"
+                                 href=\\"https://scholar.google.com/scholar?q=intitle:Roles%20of%20heterogeneous%20nuclear%20ribonucleoproteins%20A/B%20in%20cell%20growth\\"
+                                 rel=\\"noopener noreferrer\\"
+                                 tabindex=\\"0\\"
+                                 target=\\"_blank\\"
+                                 theme=\\"[object Object]\\"
+                                 title=\\"Full citation in Google scholar will open in a new window\\"
+                               >
+                                 <span
+                                   class=\\"fez-icon google large\\"
+                                 />
+                               </a>
+                               <span
+                                 class=\\"noOaIcon\\"
+                               />
+                             </div>
+                             <div
+                               class=\\"MuiGrid-item-4\\"
+                             >
+                               <a
+                                 class=\\"CitationCounts-statsLink-353 ExternalLink-externalLink-356\\"
+                                 href=\\"https://app.library.uq.edu.au/#/authors/view/UQ:41878\\"
+                                 rel=\\"noopener noreferrer\\"
+                                 tabindex=\\"0\\"
+                                 target=\\"_blank\\"
+                                 theme=\\"[object Object]\\"
+                                 title=\\"Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth\\"
+                               >
+                                 <svg
+                                   aria-hidden=\\"true\\"
+                                   class=\\"MuiSvgIcon-root-360 ExternalLink-externalLinkIcon-357\\"
+                                   focusable=\\"false\\"
+                                   role=\\"presentation\\"
+                                   viewBox=\\"0 0 24 24\\"
+                                 >
+                                   <path
+                                     d=\\"M0 0h24v24H0z\\"
+                                     fill=\\"none\\"
+                                   />
+                                   <path
+                                     d=\\"M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z\\"
+                                   />
+                                 </svg>
+                                 View full statistics
+                               </a>
+                             </div>
+                             <div
+                               class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
+                             />
+                           </div>
+                         </div>
+                       </div>
+                     </div>
+                   </div>
+                   <hr
+                     class=\\"MuiDivider-root-369 PublicationCitation-divider-346\\"
+                   />
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <span
+                       class=\\"MuiTypography-root-100 MuiTypography-caption-110 MuiTypography-gutterBottom-127\\"
+                     >
+                       <span
+                         class=\\"PublicationCitation-contentIndicatorTitle-351\\"
+                       >
+                         Content Indicators:
+                       </span>
+                       Scholarship of Teaching and Learning, Protocol
+                     </span>
+                   </div>
+                 </div>
+                 <div
+                   class=\\"MuiFormControl-root-373\\"
+                   style=\\"width: 100%;\\"
+                 >
+                   <label
+                     class=\\"MuiFormLabel-root-384 MuiFormLabel-error-387 MuiFormLabel-required-389 MuiInputLabel-root-377 MuiInputLabel-formControl-378 MuiInputLabel-animated-381\\"
+                     data-shrink=\\"false\\"
+                     id=\\"Select an action-label\\"
+                   >
+                     Select an action
+                     <span
+                       class=\\"MuiFormLabel-asterisk-390 MuiFormLabel-error-387\\"
                      >
+                        *
+                     </span>
+                   </label>
                    <div
-       class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-8-25 MuiGrid-align-items-xs-center-11 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20\\"
+                     class=\\"MuiInputBase-root-411 MuiInput-root-398 MuiInput-underline-402 MuiInputBase-error-417 MuiInput-error-403 MuiInputBase-formControl-412 MuiInput-formControl-399\\"
+                     label=\\"Select an action\\"
+                     required=\\"\\"
                    >
                      <div
-         class=\\"MuiGrid-item-4 MuiGrid-grid-xs-auto-30\\"
-         style=\\"text-align: center;\\"
+                       class=\\"MuiSelect-root-391\\"
                      >
                        <div
-           class=\\"MuiCircularProgress-root-296 MuiCircularProgress-colorPrimary-299 MuiCircularProgress-indeterminate-298\\"
-           role=\\"progressbar\\"
-           style=\\"width: 18px; height: 18px;\\"
+                         aria-haspopup=\\"true\\"
+                         aria-pressed=\\"false\\"
+                         class=\\"MuiSelect-select-392 MuiSelect-selectMenu-395 MuiInputBase-input-421 MuiInput-input-406\\"
+                         id=\\"fixAction\\"
+                         role=\\"button\\"
+                         tabindex=\\"0\\"
                        >
+                         <span>
+                           ​
+                         </span>
+                       </div>
+                       <input
+                         aria-labelledby=\\"Select an action-label\\"
+                         id=\\"Select an action\\"
+                         name=\\"fixAction\\"
+                         type=\\"hidden\\"
+                         value=\\"\\"
+                       />
                        <svg
-             class=\\"MuiCircularProgress-svg-301\\"
-             viewBox=\\"22 22 44 44\\"
+                         aria-hidden=\\"true\\"
+                         class=\\"MuiSvgIcon-root-360 MuiSelect-icon-397\\"
+                         focusable=\\"false\\"
+                         role=\\"presentation\\"
+                         viewBox=\\"0 0 24 24\\"
                        >
-             <circle
-               class=\\"MuiCircularProgress-circle-302 MuiCircularProgress-circleIndeterminate-304\\"
-               cx=\\"44\\"
-               cy=\\"44\\"
+                         <path
+                           d=\\"M7 10l5 5 5-5z\\"
+                         />
+                       </svg>
+                     </div>
+                   </div>
+                   <p
+                     class=\\"MuiFormHelperText-root-468 MuiFormHelperText-error-469 MuiFormHelperText-required-475\\"
+                   >
+                     This field is required
+                   </p>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"Alert\\"
+               style=\\"padding: 12px;\\"
+             >
+               <div
+                 class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27 MuiGrid-align-items-xs-flex-start-12 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20 Alert-warning-484 Alert-common-476\\"
+               >
+                 <div
+                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-true-45\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-container-3 MuiGrid-align-items-xs-flex-start-12 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20\\"
+                   >
+                     <div
+                       class=\\"MuiGrid-item-4 Alert-icon-477 alert-icon\\"
+                     >
+                       <svg
+                         aria-hidden=\\"true\\"
+                         class=\\"MuiSvgIcon-root-360 icon\\"
+                         focusable=\\"false\\"
+                         role=\\"presentation\\"
+                         viewBox=\\"0 0 24 24\\"
+                       >
+                         <path
+                           d=\\"M0 0h24v24H0z\\"
                            fill=\\"none\\"
-               r=\\"21\\"
-               stroke-width=\\"2\\"
                          />
+                         <path
+                           d=\\"M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z\\"
+                         />
                        </svg>
                      </div>
+                     <div
+                       class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31 Alert-text-478 alert-text\\"
+                     >
+                       <b>
+                         Validation - 
+                       </b>
+                       <span>
+                         Form cannot be submitted until all fields are valid. Please review all input fields.
+                         <ul />
+                       </span>
+                     </div>
                    </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+         </div>
          <div
-         class=\\"MuiGrid-item-4 MuiGrid-grid-xs-auto-30\\"
-         style=\\"text-align: center;\\"
+           class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27\\"
+         >
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
+           />
+           <div
+             class=\\"MuiGrid-item-4\\"
            >
+             <button
+               class=\\"MuiButtonBase-root-458 MuiButton-root-432 MuiButton-contained-443 MuiButton-raised-446 MuiButton-fullWidth-457\\"
+               tabindex=\\"0\\"
+               type=\\"button\\"
+             >
                <span
-           class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorPrimary-130\\"
-           style=\\"font-size: 1.33rem;\\"
+                 class=\\"MuiButton-label-433\\"
                >
-           Loading work
+                 Cancel
                </span>
+               <span
+                 class=\\"MuiTouchRipple-root-461\\"
+               />
+             </button>
            </div>
+         </div>
+       </form>
      </div>
    </div>
  </DocumentFragment>"
`;

exports[`FixRecord form should allow content indicators to be selected 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -270,11 +270,12 @@
                      <div
                        class=\\"MuiSelect-root-391\\"
                      >
                        <div
                          aria-haspopup=\\"true\\"
-                         aria-pressed=\\"false\\"
+                         aria-owns=\\"menu-fixAction\\"
+                         aria-pressed=\\"true\\"
                          class=\\"MuiSelect-select-392 MuiSelect-selectMenu-395 MuiInputBase-input-421 MuiInput-input-406\\"
                          id=\\"fixAction\\"
                          role=\\"button\\"
                          tabindex=\\"0\\"
                        >"
`;

exports[`FixRecord form should allow content indicators to be selected 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -249,48 +249,45 @@
                  <div
                    class=\\"MuiFormControl-root-373\\"
                    style=\\"width: 100%;\\"
                  >
                    <label
-                     class=\\"MuiFormLabel-root-384 MuiFormLabel-error-387 MuiFormLabel-required-389 MuiInputLabel-root-377 MuiInputLabel-formControl-378 MuiInputLabel-animated-381\\"
-                     data-shrink=\\"false\\"
+                     class=\\"MuiFormLabel-root-384 MuiFormLabel-filled-388 MuiFormLabel-required-389 MuiInputLabel-root-377 MuiInputLabel-formControl-378 MuiInputLabel-animated-381 MuiInputLabel-shrink-380\\"
+                     data-shrink=\\"true\\"
                      id=\\"Select an action-label\\"
                    >
                      Select an action
                      <span
-                       class=\\"MuiFormLabel-asterisk-390 MuiFormLabel-error-387\\"
+                       class=\\"MuiFormLabel-asterisk-390\\"
                      >
                         *
                      </span>
                    </label>
                    <div
-                     class=\\"MuiInputBase-root-411 MuiInput-root-398 MuiInput-underline-402 MuiInputBase-error-417 MuiInput-error-403 MuiInputBase-formControl-412 MuiInput-formControl-399\\"
+                     class=\\"MuiInputBase-root-411 MuiInput-root-398 MuiInput-underline-402 MuiInputBase-formControl-412 MuiInput-formControl-399\\"
                      label=\\"Select an action\\"
                      required=\\"\\"
                    >
                      <div
                        class=\\"MuiSelect-root-391\\"
                      >
                        <div
                          aria-haspopup=\\"true\\"
-                         aria-owns=\\"menu-fixAction\\"
-                         aria-pressed=\\"true\\"
+                         aria-pressed=\\"false\\"
                          class=\\"MuiSelect-select-392 MuiSelect-selectMenu-395 MuiInputBase-input-421 MuiInput-input-406\\"
                          id=\\"fixAction\\"
                          role=\\"button\\"
                          tabindex=\\"0\\"
                        >
-                         <span>
-                           ​
-                         </span>
+                         I am the author/editor/contributor of this work - I would like to add information, make a correction, or upload files
                        </div>
                        <input
                          aria-labelledby=\\"Select an action-label\\"
                          id=\\"Select an action\\"
                          name=\\"fixAction\\"
                          type=\\"hidden\\"
-                         value=\\"\\"
+                         value=\\"fix\\"
                        />
                        <svg
                          aria-hidden=\\"true\\"
                          class=\\"MuiSvgIcon-root-360 MuiSelect-icon-397\\"
                          focusable=\\"false\\"
@@ -301,15 +298,351 @@
                            d=\\"M7 10l5 5 5-5z\\"
                          />
                        </svg>
                      </div>
                    </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div />
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-312 MuiPaper-elevation1-315 MuiPaper-rounded-313 MuiCard-root-311 Cards-card-307 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-339\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-342\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-343\\"
+                   >
+                     Content Indicators
+                   </h3>
+                 </div>
+                 <div
+                   class=\\"MuiCardHeader-action-341\\"
+                 >
+                   <button
+                     class=\\"MuiButtonBase-root-458 MuiIconButton-root-529\\"
+                     tabindex=\\"0\\"
+                     title=\\"Click for more information\\"
+                     type=\\"button\\"
+                   >
+                     <span
+                       class=\\"MuiIconButton-label-534\\"
+                     >
+                       <svg
+                         aria-hidden=\\"false\\"
+                         class=\\"MuiSvgIcon-root-360 HelpIcon-helpIcon-521\\"
+                         focusable=\\"false\\"
+                         role=\\"img\\"
+                         viewBox=\\"0 0 24 24\\"
+                       >
+                         <path
+                           d=\\"M0 0h24v24H0z\\"
+                           fill=\\"none\\"
+                         />
+                         <path
+                           d=\\"M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z\\"
+                         />
+                         <title>
+                           Click for more information
+                         </title>
+                       </svg>
+                     </span>
+                     <span
+                       class=\\"MuiTouchRipple-root-461\\"
+                     />
+                   </button>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-345\\"
+               >
+                 <div
+                   class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
                      <p
-                     class=\\"MuiFormHelperText-root-468 MuiFormHelperText-error-469 MuiFormHelperText-required-475\\"
+                       class=\\"MuiTypography-root-100 MuiTypography-body2-108\\"
+                     >
+                       You can select multiple (of 3 available) content indicators to add more information about your work, but you cannot remove indicators already selected. To amend existing information, suggest a correction below.
+                     </p>
+                   </div>
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
                    >
-                     This field is required
+                     <div
+                       class=\\"MuiFormControl-root-373 MuiFormControl-fullWidth-376\\"
+                     >
+                       <label
+                         class=\\"MuiFormLabel-root-384 MuiFormLabel-filled-388 MuiInputLabel-root-377 MuiInputLabel-formControl-378 MuiInputLabel-animated-381 MuiInputLabel-shrink-380\\"
+                         data-shrink=\\"true\\"
+                         id=\\"Please select relevant indicator(s).-label\\"
+                       >
+                         Please select relevant indicator(s).
+                       </label>
+                       <div
+                         class=\\"MuiInputBase-root-411 MuiInput-root-398 MuiInput-underline-402 MuiInputBase-formControl-412 MuiInput-formControl-399\\"
+                       >
+                         <div
+                           class=\\"MuiSelect-root-391\\"
+                         >
+                           <div
+                             aria-haspopup=\\"true\\"
+                             aria-pressed=\\"false\\"
+                             class=\\"MuiSelect-select-392 MuiSelect-selectMenu-395 MuiInputBase-input-421 MuiInput-input-406\\"
+                             id=\\"content-indicators\\"
+                             role=\\"button\\"
+                             tabindex=\\"0\\"
+                           >
+                             Scholarship of Teaching and Learning, Protocol
+                           </div>
+                           <input
+                             style=\\"border: 1px solid red;\\"
+                             type=\\"hidden\\"
+                             value=\\"454079,454080\\"
+                           />
+                           <svg
+                             aria-hidden=\\"true\\"
+                             class=\\"MuiSvgIcon-root-360 MuiSelect-icon-397\\"
+                             focusable=\\"false\\"
+                             role=\\"presentation\\"
+                             viewBox=\\"0 0 24 24\\"
+                           >
+                             <path
+                               d=\\"M7 10l5 5 5-5z\\"
+                             />
+                           </svg>
+                         </div>
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-312 MuiPaper-elevation1-315 MuiPaper-rounded-313 MuiCard-root-311 Cards-card-307 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-339\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-342\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-343\\"
+                   >
+                     Suggest a correction
+                   </h3>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-345\\"
+               >
+                 <div
+                   class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-16-26\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <div
+                       class=\\"MuiFormControl-root-373 MuiFormControl-fullWidth-376\\"
+                     >
+                       <label
+                         class=\\"MuiFormLabel-root-384 MuiInputLabel-root-377 MuiInputLabel-formControl-378 MuiInputLabel-animated-381\\"
+                         data-shrink=\\"false\\"
+                         for=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges\\"
+                         id=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges-label\\"
+                       >
+                         Describe the problem with this record, eg record is a duplicate, or suggested changes
+                       </label>
+                       <div
+                         class=\\"MuiInputBase-root-411 MuiInput-root-398 MuiInput-underline-402 MuiInputBase-fullWidth-420 MuiInput-fullWidth-405 MuiInputBase-formControl-412 MuiInput-formControl-399 MuiInputBase-multiline-419 MuiInput-multiline-404\\"
+                       >
+                         <textarea
+                           aria-invalid=\\"false\\"
+                           aria-label=\\"Describe the problem with this record, eg record is a duplicate, or suggested changes\\"
+                           aria-labelledby=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges-label\\"
+                           class=\\"MuiInputBase-input-421 MuiInput-input-406 MuiInputBase-inputMultiline-423 MuiInput-inputMultiline-408\\"
+                           id=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges\\"
+                           label=\\"Describe the problem with this record, eg record is a duplicate, or suggested changes\\"
+                           name=\\"comments\\"
+                           rows=\\"3\\"
+                         />
+                       </div>
+                     </div>
+                   </div>
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <div
+                       class=\\"MuiFormControl-root-373 MuiFormControl-fullWidth-376\\"
+                     >
+                       <label
+                         class=\\"MuiFormLabel-root-384 MuiInputLabel-root-377 MuiInputLabel-formControl-378 MuiInputLabel-animated-381\\"
+                         data-shrink=\\"false\\"
+                         for=\\"Link(URL)\\"
+                         id=\\"Link(URL)-label\\"
+                       >
+                         Link (URL)
+                       </label>
+                       <div
+                         class=\\"MuiInputBase-root-411 MuiInput-root-398 MuiInput-underline-402 MuiInputBase-fullWidth-420 MuiInput-fullWidth-405 MuiInputBase-formControl-412 MuiInput-formControl-399\\"
+                       >
+                         <input
+                           aria-invalid=\\"false\\"
+                           aria-label=\\"Link (URL)\\"
+                           aria-labelledby=\\"Link(URL)-label\\"
+                           class=\\"MuiInputBase-input-421 MuiInput-input-406\\"
+                           id=\\"Link(URL)\\"
+                           label=\\"Link (URL)\\"
+                           name=\\"rek_link\\"
+                           type=\\"text\\"
+                           value=\\"\\"
+                         />
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-312 MuiPaper-elevation1-315 MuiPaper-rounded-313 MuiCard-root-311 Cards-card-307 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-339\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-342\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-343\\"
+                   >
+                     Upload files
+                   </h3>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-345\\"
+               >
+                 <div>
+                   Upload an Open Access file, HERDC evidence or an NTRO Research Statement
+                 </div>
+                 <p
+                   class=\\"MuiTypography-root-100 MuiTypography-body2-108 MuiTypography-gutterBottom-127\\"
+                 >
+                   You may add up to 10 files (max 8GB each)
                  </p>
+                 <div
+                   class=\\"MuiGrid-container-3\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <div
+                       id=\\"FileUploadDropZone\\"
+                       tabindex=\\"0\\"
+                     >
+                       <div
+                         aria-disabled=\\"false\\"
+                         class=\\"\\"
+                         style=\\"position: relative; padding: 0px;\\"
+                       >
+                         <div
+                           class=\\"MuiGrid-container-3 FileUploadDropzoneStaticContent-dropzone-537\\"
+                         >
+                           <div
+                             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-6-51\\"
+                           >
+                             <p
+                               class=\\"MuiTypography-root-100 MuiTypography-body2-108 FileUploadDropzoneStaticContent-heading-538\\"
+                             >
+                               File upload restrictions
+                             </p>
+                             <div>
+                               Please ensure your files:
+                               <ul>
+                                 <li>
+                                   begin with a letter and are less than 45 characters long
+                                 </li>
+                                 <li>
+                                   contain only upper and lowercase alphanumeric characters, and underscores
+                                 </li>
+                                 <li>
+                                   have only a single period which precedes the file extension: e.g. “.pdf”, “.mov”, “.tiff”, “.wav” etc.
+                                 </li>
+                                 <li>
+                                   two periods are allowed for multipart zip files. Allowed formats for part description are: e.g. “.001 ... .999”, “.r01 ... .r999” and “.part1 ... .part999”
+                                 </li>
+                                 <li>
+                                   are uploaded individually and not inside a folder
+                                 </li>
+                               </ul>
+                             </div>
+                           </div>
+                           <div
+                             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-6-51\\"
+                           >
+                             <div
+                               class=\\"MuiGrid-container-3 MuiGrid-direction-xs-column-6 MuiGrid-align-items-xs-center-11 MuiGrid-justify-xs-center-20 FileUploadDropzoneStaticContent-instructions-539\\"
+                             >
+                               <div
+                                 class=\\"MuiGrid-item-4\\"
+                               >
+                                 <svg
+                                   aria-hidden=\\"true\\"
+                                   class=\\"MuiSvgIcon-root-360 FileUploadDropzoneStaticContent-cloudIcon-540\\"
+                                   focusable=\\"false\\"
+                                   role=\\"presentation\\"
+                                   viewBox=\\"0 0 24 24\\"
+                                 >
+                                   <path
+                                     d=\\"M0 0h24v24H0z\\"
+                                     fill=\\"none\\"
+                                   />
+                                   <path
+                                     d=\\"M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM14 13v4h-4v-4H7l5-5 5 5h-3z\\"
+                                   />
+                                 </svg>
+                               </div>
+                               <div
+                                 class=\\"MuiGrid-item-4\\"
+                               >
+                                 <p>
+                                   Click here to select files, or drag files into this area to upload
+                                 </p>
+                               </div>
+                             </div>
+                           </div>
+                         </div>
+                         <input
+                           aria-label=\\"Upload files\\"
+                           autocomplete=\\"off\\"
+                           id=\\"Uploader\\"
+                           multiple=\\"\\"
+                           style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; opacity: 0.00001; pointer-events: none;\\"
+                           type=\\"file\\"
+                         />
+                       </div>
+                     </div>
+                   </div>
                  </div>
                </div>
              </div>
            </div>
            <div
@@ -353,11 +686,15 @@
                        <b>
                          Validation - 
                        </b>
                        <span>
                          Form cannot be submitted until all fields are valid. Please review all input fields.
-                         <ul />
+                         <ul>
+                           <li>
+                             Please provide additional information, corrections or upload file(s).
+                           </li>
+                         </ul>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
@@ -384,10 +721,27 @@
                  Cancel
                </span>
                <span
                  class=\\"MuiTouchRipple-root-461\\"
                />
+             </button>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4\\"
+           >
+             <button
+               class=\\"MuiButtonBase-root-458 MuiButtonBase-disabled-459 MuiButton-root-432 MuiButton-contained-443 MuiButton-containedPrimary-444 MuiButton-raised-446 MuiButton-raisedPrimary-447 MuiButton-disabled-452 MuiButton-fullWidth-457\\"
+               disabled=\\"\\"
+               id=\\"fixSubmit\\"
+               tabindex=\\"-1\\"
+               type=\\"button\\"
+             >
+               <span
+                 class=\\"MuiButton-label-433\\"
+               >
+                 Submit
+               </span>
              </button>
            </div>
          </div>
        </form>
      </div>"
`;

exports[`FixRecord form should allow content indicators to be selected 4`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -394,11 +394,12 @@
                          <div
                            class=\\"MuiSelect-root-391\\"
                          >
                            <div
                              aria-haspopup=\\"true\\"
-                             aria-pressed=\\"false\\"
+                             aria-owns=\\"menu-\\"
+                             aria-pressed=\\"true\\"
                              class=\\"MuiSelect-select-392 MuiSelect-selectMenu-395 MuiInputBase-input-421 MuiInput-input-406\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >"
`;

exports[`FixRecord form should allow content indicators to be selected 5`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -401,16 +401,16 @@
                              class=\\"MuiSelect-select-392 MuiSelect-selectMenu-395 MuiInputBase-input-421 MuiInput-input-406\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             Scholarship of Teaching and Learning, Protocol
+                             Scholarship of Teaching and Learning, Protocol, Case Study
                            </div>
                            <input
                              style=\\"border: 1px solid red;\\"
                              type=\\"hidden\\"
-                             value=\\"454079,454080\\"
+                             value=\\"454079,454080,454081\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-360 MuiSelect-icon-397\\"
                              focusable=\\"false\\"
@@ -644,67 +644,12 @@
                    </div>
                  </div>
                </div>
              </div>
            </div>
-           <div
-             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
-           >
-             <div
-               class=\\"Alert\\"
-               style=\\"padding: 12px;\\"
-             >
-               <div
-                 class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27 MuiGrid-align-items-xs-flex-start-12 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20 Alert-warning-484 Alert-common-476\\"
-               >
-                 <div
-                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-true-45\\"
-                 >
-                   <div
-                     class=\\"MuiGrid-container-3 MuiGrid-align-items-xs-flex-start-12 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20\\"
-                   >
-                     <div
-                       class=\\"MuiGrid-item-4 Alert-icon-477 alert-icon\\"
-                     >
-                       <svg
-                         aria-hidden=\\"true\\"
-                         class=\\"MuiSvgIcon-root-360 icon\\"
-                         focusable=\\"false\\"
-                         role=\\"presentation\\"
-                         viewBox=\\"0 0 24 24\\"
-                       >
-                         <path
-                           d=\\"M0 0h24v24H0z\\"
-                           fill=\\"none\\"
-                         />
-                         <path
-                           d=\\"M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z\\"
-                         />
-                       </svg>
          </div>
          <div
-                       class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31 Alert-text-478 alert-text\\"
-                     >
-                       <b>
-                         Validation - 
-                       </b>
-                       <span>
-                         Form cannot be submitted until all fields are valid. Please review all input fields.
-                         <ul>
-                           <li>
-                             Please provide additional information, corrections or upload file(s).
-                           </li>
-                         </ul>
-                       </span>
-                     </div>
-                   </div>
-                 </div>
-               </div>
-             </div>
-           </div>
-         </div>
-         <div
            class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27\\"
          >
            <div
              class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
            />
@@ -728,21 +673,23 @@
            </div>
            <div
              class=\\"MuiGrid-item-4\\"
            >
              <button
-               class=\\"MuiButtonBase-root-458 MuiButtonBase-disabled-459 MuiButton-root-432 MuiButton-contained-443 MuiButton-containedPrimary-444 MuiButton-raised-446 MuiButton-raisedPrimary-447 MuiButton-disabled-452 MuiButton-fullWidth-457\\"
-               disabled=\\"\\"
+               class=\\"MuiButtonBase-root-458 MuiButton-root-432 MuiButton-contained-443 MuiButton-containedPrimary-444 MuiButton-raised-446 MuiButton-raisedPrimary-447 MuiButton-fullWidth-457\\"
                id=\\"fixSubmit\\"
-               tabindex=\\"-1\\"
+               tabindex=\\"0\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-433\\"
                >
                  Submit
                </span>
+               <span
+                 class=\\"MuiTouchRipple-root-461\\"
+               />
              </button>
            </div>
          </div>
        </form>
      </div>"
`;

exports[`FixRecord form should allow content indicators to be selected 6`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -401,16 +401,16 @@
                              class=\\"MuiSelect-select-392 MuiSelect-selectMenu-395 MuiInputBase-input-421 MuiInput-input-406\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             Scholarship of Teaching and Learning, Protocol, Case Study
+                             Scholarship of Teaching and Learning, Protocol
                            </div>
                            <input
                              style=\\"border: 1px solid red;\\"
                              type=\\"hidden\\"
-                             value=\\"454079,454080,454081\\"
+                             value=\\"454079,454080\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-360 MuiSelect-icon-397\\"
                              focusable=\\"false\\"
@@ -644,12 +644,67 @@
                    </div>
                  </div>
                </div>
              </div>
            </div>
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"Alert\\"
+               style=\\"padding: 12px;\\"
+             >
+               <div
+                 class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27 MuiGrid-align-items-xs-flex-start-12 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20 Alert-warning-549 Alert-common-541\\"
+               >
+                 <div
+                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-true-45\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-container-3 MuiGrid-align-items-xs-flex-start-12 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20\\"
+                   >
+                     <div
+                       class=\\"MuiGrid-item-4 Alert-icon-542 alert-icon\\"
+                     >
+                       <svg
+                         aria-hidden=\\"true\\"
+                         class=\\"MuiSvgIcon-root-360 icon\\"
+                         focusable=\\"false\\"
+                         role=\\"presentation\\"
+                         viewBox=\\"0 0 24 24\\"
+                       >
+                         <path
+                           d=\\"M0 0h24v24H0z\\"
+                           fill=\\"none\\"
+                         />
+                         <path
+                           d=\\"M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z\\"
+                         />
+                       </svg>
                      </div>
                      <div
+                       class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31 Alert-text-543 alert-text\\"
+                     >
+                       <b>
+                         Validation - 
+                       </b>
+                       <span>
+                         Form cannot be submitted until all fields are valid. Please review all input fields.
+                         <ul>
+                           <li>
+                             Please provide additional information, corrections or upload file(s).
+                           </li>
+                         </ul>
+                       </span>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+         </div>
+         <div
            class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27\\"
          >
            <div
              class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
            />
@@ -673,23 +728,21 @@
            </div>
            <div
              class=\\"MuiGrid-item-4\\"
            >
              <button
-               class=\\"MuiButtonBase-root-458 MuiButton-root-432 MuiButton-contained-443 MuiButton-containedPrimary-444 MuiButton-raised-446 MuiButton-raisedPrimary-447 MuiButton-fullWidth-457\\"
+               class=\\"MuiButtonBase-root-458 MuiButtonBase-disabled-459 MuiButton-root-432 MuiButton-contained-443 MuiButton-containedPrimary-444 MuiButton-raised-446 MuiButton-raisedPrimary-447 MuiButton-disabled-452 MuiButton-fullWidth-457\\"
+               disabled=\\"\\"
                id=\\"fixSubmit\\"
-               tabindex=\\"0\\"
+               tabindex=\\"-1\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-433\\"
                >
                  Submit
                </span>
-               <span
-                 class=\\"MuiTouchRipple-root-461\\"
-               />
              </button>
            </div>
          </div>
        </form>
      </div>"
`;

exports[`FixRecord form should validate the form where applicable and submit correctly 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -261,24 +261,23 @@
                      >
                         *
                      </span>
                    </label>
                    <div
-                     class=\\"MuiInputBase-root-965 MuiInput-root-952 MuiInput-underline-956 MuiInputBase-formControl-966 MuiInput-formControl-953\\"
+                     class=\\"MuiInputBase-root-965 MuiInput-root-952 MuiInput-underline-956 MuiInputBase-disabled-968 MuiInput-disabled-955 MuiInputBase-formControl-966 MuiInput-formControl-953\\"
                      label=\\"Select an action\\"
                      required=\\"\\"
                    >
                      <div
                        class=\\"MuiSelect-root-945\\"
                      >
                        <div
                          aria-haspopup=\\"true\\"
                          aria-pressed=\\"false\\"
-                         class=\\"MuiSelect-select-946 MuiSelect-selectMenu-949 MuiInputBase-input-975 MuiInput-input-960\\"
+                         class=\\"MuiSelect-select-946 MuiSelect-selectMenu-949 MuiSelect-disabled-950 MuiInputBase-input-975 MuiInput-input-960 MuiInputBase-disabled-968 MuiInput-disabled-955\\"
                          id=\\"fixAction\\"
                          role=\\"button\\"
-                         tabindex=\\"0\\"
                        >
                          I am the author/editor/contributor of this work - I would like to add information, make a correction, or upload files
                        </div>
                        <input
                          aria-labelledby=\\"Select an action-label\\"
@@ -387,23 +386,22 @@
                          id=\\"Please select relevant indicator(s).-label\\"
                        >
                          Please select relevant indicator(s).
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-965 MuiInput-root-952 MuiInput-underline-956 MuiInputBase-formControl-966 MuiInput-formControl-953\\"
+                         class=\\"MuiInputBase-root-965 MuiInput-root-952 MuiInput-underline-956 MuiInputBase-disabled-968 MuiInput-disabled-955 MuiInputBase-formControl-966 MuiInput-formControl-953\\"
                        >
                          <div
                            class=\\"MuiSelect-root-945\\"
                          >
                            <div
                              aria-haspopup=\\"true\\"
                              aria-owns=\\"menu-\\"
                              aria-pressed=\\"true\\"
-                             class=\\"MuiSelect-select-946 MuiSelect-selectMenu-949 MuiInputBase-input-975 MuiInput-input-960\\"
+                             class=\\"MuiSelect-select-946 MuiSelect-selectMenu-949 MuiSelect-disabled-950 MuiInputBase-input-975 MuiInput-input-960 MuiInputBase-disabled-968 MuiInput-disabled-955\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
-                             tabindex=\\"0\\"
                            >
                              Scholarship of Teaching and Learning, Protocol, Case Study
                            </div>
                            <input
                              style=\\"border: 1px solid red;\\"
@@ -459,25 +457,26 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-927 MuiFormControl-fullWidth-930\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-938 MuiInputLabel-root-931 MuiInputLabel-formControl-932 MuiInputLabel-animated-935\\"
+                         class=\\"MuiFormLabel-root-938 MuiFormLabel-disabled-940 MuiInputLabel-root-931 MuiInputLabel-formControl-932 MuiInputLabel-animated-935\\"
                          data-shrink=\\"false\\"
                          for=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges\\"
                          id=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges-label\\"
                        >
                          Describe the problem with this record, eg record is a duplicate, or suggested changes
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-965 MuiInput-root-952 MuiInput-underline-956 MuiInputBase-fullWidth-974 MuiInput-fullWidth-959 MuiInputBase-formControl-966 MuiInput-formControl-953 MuiInputBase-multiline-973 MuiInput-multiline-958\\"
+                         class=\\"MuiInputBase-root-965 MuiInput-root-952 MuiInput-underline-956 MuiInputBase-disabled-968 MuiInput-disabled-955 MuiInputBase-fullWidth-974 MuiInput-fullWidth-959 MuiInputBase-formControl-966 MuiInput-formControl-953 MuiInputBase-multiline-973 MuiInput-multiline-958\\"
                        >
                          <textarea
                            aria-invalid=\\"false\\"
                            aria-label=\\"Describe the problem with this record, eg record is a duplicate, or suggested changes\\"
                            aria-labelledby=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges-label\\"
-                           class=\\"MuiInputBase-input-975 MuiInput-input-960 MuiInputBase-inputMultiline-977 MuiInput-inputMultiline-962\\"
+                           class=\\"MuiInputBase-input-975 MuiInput-input-960 MuiInputBase-disabled-968 MuiInput-disabled-955 MuiInputBase-inputMultiline-977 MuiInput-inputMultiline-962\\"
+                           disabled=\\"\\"
                            id=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges\\"
                            label=\\"Describe the problem with this record, eg record is a duplicate, or suggested changes\\"
                            name=\\"comments\\"
                            rows=\\"3\\"
                          />
@@ -489,25 +488,26 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-927 MuiFormControl-fullWidth-930\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-938 MuiInputLabel-root-931 MuiInputLabel-formControl-932 MuiInputLabel-animated-935\\"
+                         class=\\"MuiFormLabel-root-938 MuiFormLabel-disabled-940 MuiInputLabel-root-931 MuiInputLabel-formControl-932 MuiInputLabel-animated-935\\"
                          data-shrink=\\"false\\"
                          for=\\"Link(URL)\\"
                          id=\\"Link(URL)-label\\"
                        >
                          Link (URL)
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-965 MuiInput-root-952 MuiInput-underline-956 MuiInputBase-fullWidth-974 MuiInput-fullWidth-959 MuiInputBase-formControl-966 MuiInput-formControl-953\\"
+                         class=\\"MuiInputBase-root-965 MuiInput-root-952 MuiInput-underline-956 MuiInputBase-disabled-968 MuiInput-disabled-955 MuiInputBase-fullWidth-974 MuiInput-fullWidth-959 MuiInputBase-formControl-966 MuiInput-formControl-953\\"
                        >
                          <input
                            aria-invalid=\\"false\\"
                            aria-label=\\"Link (URL)\\"
                            aria-labelledby=\\"Link(URL)-label\\"
-                           class=\\"MuiInputBase-input-975 MuiInput-input-960\\"
+                           class=\\"MuiInputBase-input-975 MuiInput-input-960 MuiInputBase-disabled-968 MuiInput-disabled-955\\"
+                           disabled=\\"\\"
                            id=\\"Link(URL)\\"
                            label=\\"Link (URL)\\"
                            name=\\"rek_link\\"
                            type=\\"text\\"
                            value=\\"\\"
@@ -558,11 +558,11 @@
                      <div
                        id=\\"FileUploadDropZone\\"
                        tabindex=\\"0\\"
                      >
                        <div
-                         aria-disabled=\\"false\\"
+                         aria-disabled=\\"true\\"
                          class=\\"\\"
                          style=\\"position: relative; padding: 0px;\\"
                        >
                          <div
                            class=\\"MuiGrid-container-557 FileUploadDropzoneStaticContent-dropzone-1091\\"
@@ -632,10 +632,11 @@
                            </div>
                          </div>
                          <input
                            aria-label=\\"Upload files\\"
                            autocomplete=\\"off\\"
+                           disabled=\\"\\"
                            id=\\"Uploader\\"
                            multiple=\\"\\"
                            style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; opacity: 0.00001; pointer-events: none;\\"
                            type=\\"file\\"
                          />
@@ -644,52 +645,100 @@
                    </div>
                  </div>
                </div>
              </div>
            </div>
+           <div
+             class=\\"MuiGrid-item-558 MuiGrid-grid-xs-12-597\\"
+           >
+             <div
+               class=\\"Alert\\"
+               style=\\"padding: 12px;\\"
+             >
+               <div
+                 class=\\"MuiGrid-container-557 MuiGrid-spacing-xs-24-581 MuiGrid-align-items-xs-flex-start-566 MuiGrid-align-content-xs-center-569 MuiGrid-justify-xs-center-574 Alert-info_outline-1107 Alert-common-1095\\"
+               >
+                 <div
+                   class=\\"MuiGrid-item-558 MuiGrid-grid-xs-12-597 MuiGrid-grid-sm-true-599\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-container-557 MuiGrid-align-items-xs-flex-start-566 MuiGrid-align-content-xs-center-569 MuiGrid-justify-xs-center-574\\"
+                   >
+                     <div
+                       class=\\"MuiGrid-item-558 Alert-icon-1096 alert-icon\\"
+                     >
+                       <div
+                         class=\\"MuiCircularProgress-root-1109 MuiCircularProgress-colorPrimary-1112 MuiCircularProgress-indeterminate-1111 spinner\\"
+                         role=\\"progressbar\\"
+                         style=\\"width: 38px; height: 38px;\\"
+                       >
+                         <svg
+                           class=\\"MuiCircularProgress-svg-1114\\"
+                           viewBox=\\"22 22 44 44\\"
+                         >
+                           <circle
+                             class=\\"MuiCircularProgress-circle-1115 MuiCircularProgress-circleIndeterminate-1117\\"
+                             cx=\\"44\\"
+                             cy=\\"44\\"
+                             fill=\\"none\\"
+                             r=\\"20.5\\"
+                             stroke-width=\\"3\\"
+                           />
+                         </svg>
+                       </div>
                      </div>
                      <div
+                       class=\\"MuiGrid-item-558 MuiGrid-grid-xs-true-585 Alert-text-1097 alert-text\\"
+                     >
+                       <b>
+                         Saving - 
+                       </b>
+                       Request is being processed.
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+         </div>
+         <div
            class=\\"MuiGrid-container-557 MuiGrid-spacing-xs-24-581\\"
          >
            <div
              class=\\"MuiGrid-item-558 MuiGrid-grid-xs-true-585\\"
            />
            <div
              class=\\"MuiGrid-item-558\\"
            >
              <button
-               class=\\"MuiButtonBase-root-1012 MuiButton-root-986 MuiButton-contained-997 MuiButton-raised-1000 MuiButton-fullWidth-1011\\"
-               tabindex=\\"0\\"
+               class=\\"MuiButtonBase-root-1012 MuiButtonBase-disabled-1013 MuiButton-root-986 MuiButton-contained-997 MuiButton-raised-1000 MuiButton-disabled-1006 MuiButton-fullWidth-1011\\"
+               disabled=\\"\\"
+               tabindex=\\"-1\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-987\\"
                >
                  Cancel
                </span>
-               <span
-                 class=\\"MuiTouchRipple-root-1015\\"
-               />
              </button>
            </div>
            <div
              class=\\"MuiGrid-item-558\\"
            >
              <button
-               class=\\"MuiButtonBase-root-1012 MuiButton-root-986 MuiButton-contained-997 MuiButton-containedPrimary-998 MuiButton-raised-1000 MuiButton-raisedPrimary-1001 MuiButton-fullWidth-1011\\"
+               class=\\"MuiButtonBase-root-1012 MuiButtonBase-disabled-1013 MuiButton-root-986 MuiButton-contained-997 MuiButton-containedPrimary-998 MuiButton-raised-1000 MuiButton-raisedPrimary-1001 MuiButton-disabled-1006 MuiButton-fullWidth-1011\\"
+               disabled=\\"\\"
                id=\\"fixSubmit\\"
-               tabindex=\\"0\\"
+               tabindex=\\"-1\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-987\\"
                >
                  Submit
                </span>
-               <span
-                 class=\\"MuiTouchRipple-root-1015\\"
-               />
              </button>
            </div>
          </div>
        </form>
      </div>"
`;

exports[`FixRecord form should validate the form where applicable and submit correctly 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -261,23 +261,24 @@
                      >
                         *
                      </span>
                    </label>
                    <div
-                     class=\\"MuiInputBase-root-965 MuiInput-root-952 MuiInput-underline-956 MuiInputBase-disabled-968 MuiInput-disabled-955 MuiInputBase-formControl-966 MuiInput-formControl-953\\"
+                     class=\\"MuiInputBase-root-965 MuiInput-root-952 MuiInput-underline-956 MuiInputBase-formControl-966 MuiInput-formControl-953\\"
                      label=\\"Select an action\\"
                      required=\\"\\"
                    >
                      <div
                        class=\\"MuiSelect-root-945\\"
                      >
                        <div
                          aria-haspopup=\\"true\\"
                          aria-pressed=\\"false\\"
-                         class=\\"MuiSelect-select-946 MuiSelect-selectMenu-949 MuiSelect-disabled-950 MuiInputBase-input-975 MuiInput-input-960 MuiInputBase-disabled-968 MuiInput-disabled-955\\"
+                         class=\\"MuiSelect-select-946 MuiSelect-selectMenu-949 MuiInputBase-input-975 MuiInput-input-960\\"
                          id=\\"fixAction\\"
                          role=\\"button\\"
+                         tabindex=\\"0\\"
                        >
                          I am the author/editor/contributor of this work - I would like to add information, make a correction, or upload files
                        </div>
                        <input
                          aria-labelledby=\\"Select an action-label\\"
@@ -301,11 +302,11 @@
                    </div>
                  </div>
                </div>
              </div>
            </div>
-           <div />
+           <span />
            <div
              class=\\"MuiGrid-item-558 MuiGrid-grid-xs-12-597\\"
            >
              <div
                class=\\"MuiPaper-root-866 MuiPaper-elevation1-869 MuiPaper-rounded-867 MuiCard-root-865 Cards-card-861 StandardCard\\"
@@ -386,22 +387,23 @@
                          id=\\"Please select relevant indicator(s).-label\\"
                        >
                          Please select relevant indicator(s).
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-965 MuiInput-root-952 MuiInput-underline-956 MuiInputBase-disabled-968 MuiInput-disabled-955 MuiInputBase-formControl-966 MuiInput-formControl-953\\"
+                         class=\\"MuiInputBase-root-965 MuiInput-root-952 MuiInput-underline-956 MuiInputBase-formControl-966 MuiInput-formControl-953\\"
                        >
                          <div
                            class=\\"MuiSelect-root-945\\"
                          >
                            <div
                              aria-haspopup=\\"true\\"
                              aria-owns=\\"menu-\\"
                              aria-pressed=\\"true\\"
-                             class=\\"MuiSelect-select-946 MuiSelect-selectMenu-949 MuiSelect-disabled-950 MuiInputBase-input-975 MuiInput-input-960 MuiInputBase-disabled-968 MuiInput-disabled-955\\"
+                             class=\\"MuiSelect-select-946 MuiSelect-selectMenu-949 MuiInputBase-input-975 MuiInput-input-960\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
+                             tabindex=\\"0\\"
                            >
                              Scholarship of Teaching and Learning, Protocol, Case Study
                            </div>
                            <input
                              style=\\"border: 1px solid red;\\"
@@ -457,26 +459,25 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-927 MuiFormControl-fullWidth-930\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-938 MuiFormLabel-disabled-940 MuiInputLabel-root-931 MuiInputLabel-formControl-932 MuiInputLabel-animated-935\\"
+                         class=\\"MuiFormLabel-root-938 MuiInputLabel-root-931 MuiInputLabel-formControl-932 MuiInputLabel-animated-935\\"
                          data-shrink=\\"false\\"
                          for=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges\\"
                          id=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges-label\\"
                        >
                          Describe the problem with this record, eg record is a duplicate, or suggested changes
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-965 MuiInput-root-952 MuiInput-underline-956 MuiInputBase-disabled-968 MuiInput-disabled-955 MuiInputBase-fullWidth-974 MuiInput-fullWidth-959 MuiInputBase-formControl-966 MuiInput-formControl-953 MuiInputBase-multiline-973 MuiInput-multiline-958\\"
+                         class=\\"MuiInputBase-root-965 MuiInput-root-952 MuiInput-underline-956 MuiInputBase-fullWidth-974 MuiInput-fullWidth-959 MuiInputBase-formControl-966 MuiInput-formControl-953 MuiInputBase-multiline-973 MuiInput-multiline-958\\"
                        >
                          <textarea
                            aria-invalid=\\"false\\"
                            aria-label=\\"Describe the problem with this record, eg record is a duplicate, or suggested changes\\"
                            aria-labelledby=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges-label\\"
-                           class=\\"MuiInputBase-input-975 MuiInput-input-960 MuiInputBase-disabled-968 MuiInput-disabled-955 MuiInputBase-inputMultiline-977 MuiInput-inputMultiline-962\\"
-                           disabled=\\"\\"
+                           class=\\"MuiInputBase-input-975 MuiInput-input-960 MuiInputBase-inputMultiline-977 MuiInput-inputMultiline-962\\"
                            id=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges\\"
                            label=\\"Describe the problem with this record, eg record is a duplicate, or suggested changes\\"
                            name=\\"comments\\"
                            rows=\\"3\\"
                          />
@@ -488,26 +489,25 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-927 MuiFormControl-fullWidth-930\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-938 MuiFormLabel-disabled-940 MuiInputLabel-root-931 MuiInputLabel-formControl-932 MuiInputLabel-animated-935\\"
+                         class=\\"MuiFormLabel-root-938 MuiInputLabel-root-931 MuiInputLabel-formControl-932 MuiInputLabel-animated-935\\"
                          data-shrink=\\"false\\"
                          for=\\"Link(URL)\\"
                          id=\\"Link(URL)-label\\"
                        >
                          Link (URL)
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-965 MuiInput-root-952 MuiInput-underline-956 MuiInputBase-disabled-968 MuiInput-disabled-955 MuiInputBase-fullWidth-974 MuiInput-fullWidth-959 MuiInputBase-formControl-966 MuiInput-formControl-953\\"
+                         class=\\"MuiInputBase-root-965 MuiInput-root-952 MuiInput-underline-956 MuiInputBase-fullWidth-974 MuiInput-fullWidth-959 MuiInputBase-formControl-966 MuiInput-formControl-953\\"
                        >
                          <input
                            aria-invalid=\\"false\\"
                            aria-label=\\"Link (URL)\\"
                            aria-labelledby=\\"Link(URL)-label\\"
-                           class=\\"MuiInputBase-input-975 MuiInput-input-960 MuiInputBase-disabled-968 MuiInput-disabled-955\\"
-                           disabled=\\"\\"
+                           class=\\"MuiInputBase-input-975 MuiInput-input-960\\"
                            id=\\"Link(URL)\\"
                            label=\\"Link (URL)\\"
                            name=\\"rek_link\\"
                            type=\\"text\\"
                            value=\\"\\"
@@ -558,11 +558,11 @@
                      <div
                        id=\\"FileUploadDropZone\\"
                        tabindex=\\"0\\"
                      >
                        <div
-                         aria-disabled=\\"true\\"
+                         aria-disabled=\\"false\\"
                          class=\\"\\"
                          style=\\"position: relative; padding: 0px;\\"
                        >
                          <div
                            class=\\"MuiGrid-container-557 FileUploadDropzoneStaticContent-dropzone-1091\\"
@@ -632,11 +632,10 @@
                            </div>
                          </div>
                          <input
                            aria-label=\\"Upload files\\"
                            autocomplete=\\"off\\"
-                           disabled=\\"\\"
                            id=\\"Uploader\\"
                            multiple=\\"\\"
                            style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; opacity: 0.00001; pointer-events: none;\\"
                            type=\\"file\\"
                          />
@@ -653,48 +652,44 @@
              <div
                class=\\"Alert\\"
                style=\\"padding: 12px;\\"
              >
                <div
-                 class=\\"MuiGrid-container-557 MuiGrid-spacing-xs-24-581 MuiGrid-align-items-xs-flex-start-566 MuiGrid-align-content-xs-center-569 MuiGrid-justify-xs-center-574 Alert-info_outline-1107 Alert-common-1095\\"
+                 class=\\"MuiGrid-container-557 MuiGrid-spacing-xs-24-581 MuiGrid-align-items-xs-flex-start-566 MuiGrid-align-content-xs-center-569 MuiGrid-justify-xs-center-574 Alert-done-1131 Alert-common-1118\\"
                >
                  <div
                    class=\\"MuiGrid-item-558 MuiGrid-grid-xs-12-597 MuiGrid-grid-sm-true-599\\"
                  >
                    <div
                      class=\\"MuiGrid-container-557 MuiGrid-align-items-xs-flex-start-566 MuiGrid-align-content-xs-center-569 MuiGrid-justify-xs-center-574\\"
-                   >
-                     <div
-                       class=\\"MuiGrid-item-558 Alert-icon-1096 alert-icon\\"
                    >
                      <div
-                         class=\\"MuiCircularProgress-root-1109 MuiCircularProgress-colorPrimary-1112 MuiCircularProgress-indeterminate-1111 spinner\\"
-                         role=\\"progressbar\\"
-                         style=\\"width: 38px; height: 38px;\\"
+                       class=\\"MuiGrid-item-558 Alert-icon-1119 alert-icon\\"
                      >
                        <svg
-                           class=\\"MuiCircularProgress-svg-1114\\"
-                           viewBox=\\"22 22 44 44\\"
+                         aria-hidden=\\"true\\"
+                         class=\\"MuiSvgIcon-root-914 icon\\"
+                         focusable=\\"false\\"
+                         role=\\"presentation\\"
+                         viewBox=\\"0 0 24 24\\"
                        >
-                           <circle
-                             class=\\"MuiCircularProgress-circle-1115 MuiCircularProgress-circleIndeterminate-1117\\"
-                             cx=\\"44\\"
-                             cy=\\"44\\"
+                         <path
+                           d=\\"M0 0h24v24H0z\\"
                            fill=\\"none\\"
-                             r=\\"20.5\\"
-                             stroke-width=\\"3\\"
                          />
+                         <path
+                           d=\\"M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z\\"
+                         />
                        </svg>
-                       </div>
                      </div>
                      <div
-                       class=\\"MuiGrid-item-558 MuiGrid-grid-xs-true-585 Alert-text-1097 alert-text\\"
+                       class=\\"MuiGrid-item-558 MuiGrid-grid-xs-true-585 Alert-text-1120 alert-text\\"
                      >
                        <b>
-                         Saving - 
+                         Success - 
                        </b>
-                       Request is being processed.
+                       Fix record request has been submitted successfully.
                      </div>
                    </div>
                  </div>
                </div>
              </div>
@@ -708,37 +703,41 @@
            />
            <div
              class=\\"MuiGrid-item-558\\"
            >
              <button
-               class=\\"MuiButtonBase-root-1012 MuiButtonBase-disabled-1013 MuiButton-root-986 MuiButton-contained-997 MuiButton-raised-1000 MuiButton-disabled-1006 MuiButton-fullWidth-1011\\"
-               disabled=\\"\\"
-               tabindex=\\"-1\\"
+               class=\\"MuiButtonBase-root-1012 MuiButton-root-986 MuiButton-contained-997 MuiButton-raised-1000 MuiButton-fullWidth-1011\\"
+               tabindex=\\"0\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-987\\"
                >
                  Cancel
                </span>
+               <span
+                 class=\\"MuiTouchRipple-root-1015\\"
+               />
              </button>
            </div>
            <div
              class=\\"MuiGrid-item-558\\"
            >
              <button
-               class=\\"MuiButtonBase-root-1012 MuiButtonBase-disabled-1013 MuiButton-root-986 MuiButton-contained-997 MuiButton-containedPrimary-998 MuiButton-raised-1000 MuiButton-raisedPrimary-1001 MuiButton-disabled-1006 MuiButton-fullWidth-1011\\"
-               disabled=\\"\\"
+               class=\\"MuiButtonBase-root-1012 MuiButton-root-986 MuiButton-contained-997 MuiButton-containedPrimary-998 MuiButton-raised-1000 MuiButton-raisedPrimary-1001 MuiButton-fullWidth-1011\\"
                id=\\"fixSubmit\\"
-               tabindex=\\"-1\\"
+               tabindex=\\"0\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-987\\"
                >
                  Submit
                </span>
+               <span
+                 class=\\"MuiTouchRipple-root-1015\\"
+               />
              </button>
            </div>
          </div>
        </form>
      </div>"
`;
